--- a/action.yml
+++ b/action.yml
@@ -136,12 +136,14 @@ runs:
       with:
         # Path to SARIF file
         sarif_file: ${{inputs.polaris_sarif_file}}
+      continue-on-error: true
     - if: ${{inputs.polaris_sarif == 'true' && inputs.polaris == 'true'}}
       name: Archive scanning results
       uses: actions/upload-artifact@v3
       with:
         name: polaris-scan-results
         path: ${{inputs.polaris_sarif_file}}
+      continue-on-error: true
 
     #------------Black Duck------------------------#
     - if: ${{inputs.blackduck == 'true'}}
@@ -184,9 +186,11 @@ runs:
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: blackduck-sarif.json
+      continue-on-error: true
     - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true'}}
       name: Archive scanning results
       uses: actions/upload-artifact@v3
       with:
         name: bd-scan-results
         path: blackduck-sarif.json
+      continue-on-error: true
