--- a/action.yml
+++ b/action.yml
@@ -167,7 +167,7 @@ runs:
       env:
         # Pass the GitHub token to the script in order to create PRs
         GITHUB_TOKEN: ${{ inputs.github_token }}        
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push' && inputs.blackduck_sarif == 'true'}}
       name: Create sarif -format report from full scan
       run: |
         python scripts/blackduckResultsToSarif.py --url=${{inputs.blackduck_url}} --token=${{inputs.blackduck_token}} --project=${{inputs.blackduck_project}} --version=${{inputs.blackduck_version}} --policyCategories=${{inputs.blackduck_policy_categories}} --log_level=${{inputs.log_level}} --outputFile=blackduck-sarif.json
