--- a/action.yml
+++ b/action.yml
@@ -163,7 +163,7 @@ runs:
         echo "detectOpts=detect.code.location.name=${{inputs.blackduck_project}}-${{inputs.blackduck_version}},${{inputs.blackduck_detect_opts}}" >> $GITHUB_ENV
       shell: bash
     # Run manual full/intelligent scan
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request'}}
       name: Run Black Duck Full Scan
       run: |
         blackduck-direct-scan-action --debug=${{ inputs.blackduck_log_level }} --bd_url ${{ inputs.blackduck_url }} --bd_token ${{ inputs.blackduck_token }} --mode intelligent --bd_trustcert true --project=${{ inputs.blackduck_project }} --version=${{ inputs.blackduck_version }} --sarif blackduck-sarif.json --detect_opts	${{ env.detectOpts }}
@@ -171,13 +171,13 @@ runs:
       env:
         # Pass the GitHub token to the script in order to create PRs
         GITHUB_TOKEN: ${{ inputs.github_token }}        
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push' && inputs.blackduck_sarif == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' && inputs.blackduck_sarif == 'true'}}
       name: Create sarif -format report from full scan
       run: |
         python scripts/blackduckResultsToSarif.py --url=${{inputs.blackduck_url}} --token=${{inputs.blackduck_token}} --project=${{inputs.blackduck_project}} --version=${{inputs.blackduck_version}} --policyCategories=${{inputs.blackduck_policy_categories}} --log_level=${{inputs.blackduck_log_level}} --outputFile=blackduck-sarif.json
       shell: bash
     # Run Black Duck rapid scan
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push' || github.event_name == 'workflow_dispatch'}}
       name: Run Black Duck Rapid Scan
       run: |
         blackduck-direct-scan-action --debug=${{ inputs.blackduck_log_level }} --bd_url ${{ inputs.blackduck_url }} --bd_token ${{ inputs.blackduck_token }} --mode rapid --bd_trustcert true --project=${{ inputs.blackduck_project }} --version=${{ inputs.blackduck_version }} --sarif blackduck-sarif.json --detect_opts	${{ env.detectOpts }}
