--- a/action.yml
+++ b/action.yml
@@ -98,6 +98,30 @@ inputs:
     description: Logging level. Default is 0 = INFO and 9 = DEBUG.
     default: 0 # 0 = INFO and 9 = DEBUG
     required: false
+  #------------CNC related inputs------------------------#
+  cnc_url:
+    description: URL for CNC.
+    required: true
+  cnc_username:
+    description: Coverity Connect username
+    required: true
+  cnc_passphare:
+    description: Coverity Connect password
+    required: true
+  cnc_project:
+    description: Project name, if not given then default=github.repository
+    required: false
+    default: ${{github.repository}}
+  cnc_stream:
+    description: Project stream name, if not given then default=github.ref_name
+    required: false
+    default: ${{github.ref_name}}
+  cnc_repository_name:
+    description: Project repository name
+    required: false
+  cnc_branche_name:
+    description: Project branch name
+    required: false
   #------------Which tools are activated------------------------#
   polaris:
     description: "If this is true, then Polaris analysis is done. Default is false."
@@ -105,6 +129,10 @@ inputs:
     default: "false"
   blackduck:
     description: "If this is true, then Black Duck analysis is done. Default is false."
+    required: false
+    default: "false"
+  cnc:
+    description: "If this is true, then Cloud Native Coverity (CNC) analysis is done. Default is false."
     required: false
     default: "false"
 
@@ -200,3 +228,21 @@ runs:
       continue-on-error: true
 
     #------------Next tool------------------------#
+    - if: ${{inputs.cnc == 'true'}}
+      name: Synopsys Action
+      uses: synopsys-sig/synopsys-action@1.1.0
+      with:
+        coverity_url: ${{ inputs.cnc_url }}
+        coverity_user: ${{ inputs.cnc_username }}
+        coverity_passphrase: ${{ inputs.cnc_passphare }}
+        # Many customers prefer to set their Coverity project and stream names to match
+        # the GitHub repository name
+        coverity_project_name: ${{ inputs.cnc_project }}
+        coverity_stream_name: ${{ inputs.cnc_stream }}
+        # Optionally you may specify the ID number of a saved view to apply as a "break the build" policy.
+        # If any defects are found within this view when applied to the project, the build will be failed
+        # with an exit code.
+        #coverity_policy_view: 100001
+        # Below fields are optional
+        coverity_repository_name: ${{ inputs.cnc_repository_name }}
+        coverity_branch_name: ${{ inputs.cnc_branche_name }}
