--- a/action.yml
+++ b/action.yml
@@ -177,8 +177,8 @@ runs:
         path: ${{inputs.polaris_sarif_file}}
       continue-on-error: true
 
-    #------------Black Duck------------------------#
-    - if: ${{inputs.blackduck == 'true'}}
+    #------------Black Duck incremental------------------------#
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request'}}
       name: Setup python
       uses: actions/setup-python@v4
       with:
@@ -190,20 +190,6 @@ runs:
         pip install requests blackduck_direct_scan_action
         echo "detectOpts=detect.code.location.name=${{inputs.blackduck_project}}-${{inputs.blackduck_version}},detect.timeout=7200,detect.detector.search.depth=20,detect.excluded.directories.search.depth=20,detect.excluded.directories=node_modules,detect.blackduck.signature.scanner.exclusion.name.patterns=detect.jar,detect.npm.dependency.types.excluded=DEV,detect.wait.for.results=true,${{inputs.blackduck_detect_opts}}" >> $GITHUB_ENV
       shell: bash
-    # Run manual full/intelligent scan
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'}}
-      name: Run Black Duck Full Scan
-      run: |
-        blackduck-direct-scan-action --debug=${{ inputs.blackduck_log_level }} --bd_url ${{ inputs.blackduck_url }} --bd_token ${{ inputs.blackduck_token }} --mode intelligent --bd_trustcert true --project=${{ inputs.blackduck_project }} --version=${{ inputs.blackduck_version }} --sarif blackduck-sarif.json --detect_opts	${{ env.detectOpts }}
-      shell: bash
-      env:
-        # Pass the GitHub token to the script in order to create PRs
-        GITHUB_TOKEN: ${{ inputs.github_token }}        
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' && inputs.blackduck_sarif == 'true'}}
-      name: Create sarif -format report from full scan
-      run: |
-        python scripts/blackduckResultsToSarif.py --url=${{inputs.blackduck_url}} --token=${{inputs.blackduck_token}} --project=${{inputs.blackduck_project}} --version=${{inputs.blackduck_version}} --policyCategories=${{inputs.blackduck_policy_categories}} --log_level=${{inputs.blackduck_log_level}} --outputFile=blackduck-sarif.json
-      shell: bash
     # Run Black Duck rapid scan
     - if: ${{inputs.blackduck == 'true' && github.event_name == 'push'}}
       name: Run Black Duck Rapid Scan
@@ -213,6 +199,35 @@ runs:
       env:
         # Pass the GitHub token to the script in order to create PRs
         GITHUB_TOKEN: ${{ inputs.github_token }}  
+    #------------Black Duck full------------------------#
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push'}}}
+      name: Black Duck Analysis with synopsys-action
+      uses: synopsys-sig/synopsys-action@v1.1.0
+      with:
+        blackduck_apiToken: ${{ inputs.blackduck_token }}
+        blackduck_url: ${{ inputs.blackduck_url }}
+
+        # Optional parameter. By default, pushes will initiate a full "intelligent" scan and pull requests
+        # will initiate a rapid scan.
+        blackduck_scan_full: false
+        # Required parameter if blackduck_automation_fixpr is enabled
+        # Make sure GITHUB_TOKEN have appropriate permissions
+        github_token: ${{ inputs.github_token }}
+        # Optional parameter. By default, create fix pull requests if vulnerabilities are reported
+        # Passing false will disable fix pull request creation
+        blackduck_automation_fixpr: false
+        # Optional parameter. The values could be. ALL|NONE|BLOCKER|CRITICAL|MAJOR|MINOR|OK|TRIVIAL|UNSPECIFIED
+        # Single parameter
+        blackduck_scan_failure_severities: "NONE"
+        # multiple parameters
+        # blackduck_scan_failure_severities: "BLOCKER,CRITICAL,TRIVIAL"
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'push'}}}
+      uses: lejouni/blackduck-sarif-formatter@main
+      with:
+        url: ${{ inputs.blackduck_url }}
+        token: ${{ inputs.blackduck_token }}
+        outputFile: ${{github.workspace}}/blackduck-sarif.json
+        
     - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true'}}
       name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
@@ -229,7 +244,7 @@ runs:
 
     #------------Next tool------------------------#
     - if: ${{inputs.cnc == 'true'}}
-      name: Synopsys Action
+      name: CNC Analysis with synopsys-action
       uses: synopsys-sig/synopsys-action@v1.1.0
       with:
         coverity_url: ${{ inputs.cnc_url }}
