--- a/action.yml
+++ b/action.yml
@@ -183,7 +183,7 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: 3.9 #install the python needed
-    - if: ${{inputs.blackduck == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request'}}}
       name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -191,7 +191,7 @@ runs:
         echo "detectOpts=detect.code.location.name=${{inputs.blackduck_project}}-${{inputs.blackduck_version}},detect.timeout=7200,detect.detector.search.depth=20,detect.excluded.directories.search.depth=20,detect.excluded.directories=node_modules,detect.blackduck.signature.scanner.exclusion.name.patterns=detect.jar,detect.npm.dependency.types.excluded=DEV,detect.wait.for.results=true,${{inputs.blackduck_detect_opts}}" >> $GITHUB_ENV
       shell: bash
     # Run Black Duck rapid scan
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request'}}
       name: Run Black Duck Rapid Scan
       run: |
         blackduck-direct-scan-action --debug=${{ inputs.blackduck_log_level }} --bd_url ${{ inputs.blackduck_url }} --bd_token ${{ inputs.blackduck_token }} --mode rapid --bd_trustcert true --project=${{ inputs.blackduck_project }} --version=${{ inputs.blackduck_version }} --sarif blackduck-sarif.json --detect_opts	${{ env.detectOpts }}
@@ -206,21 +206,10 @@ runs:
       with:
         blackduck_apiToken: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
-
-        # Optional parameter. By default, pushes will initiate a full "intelligent" scan and pull requests
-        # will initiate a rapid scan.
-        blackduck_scan_full: false
-        # Required parameter if blackduck_automation_fixpr is enabled
-        # Make sure GITHUB_TOKEN have appropriate permissions
+        blackduck_scan_full: true
         github_token: ${{ inputs.github_token }}
-        # Optional parameter. By default, create fix pull requests if vulnerabilities are reported
-        # Passing false will disable fix pull request creation
         blackduck_automation_fixpr: false
-        # Optional parameter. The values could be. ALL|NONE|BLOCKER|CRITICAL|MAJOR|MINOR|OK|TRIVIAL|UNSPECIFIED
-        # Single parameter
-        blackduck_scan_failure_severities: "BLOCKER"
-        # multiple parameters
-        # blackduck_scan_failure_severities: "BLOCKER,CRITICAL,TRIVIAL"
+        blackduck_scan_failure_severities: "NONE"
     - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'push'}}}
       uses: lejouni/blackduck-sarif-formatter@main
       with:
