--- a/action.yml
+++ b/action.yml
@@ -210,6 +210,16 @@ runs:
         github_token: ${{ inputs.github_token }}
         blackduck_automation_fixpr: false
         blackduck_scan_failure_severities: "NONE"
+      env:
+        DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
+        DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
+        DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}-${{inputs.blackduck_version}}
+        DETECT_TIMEOUT: "7200"
+        DETECT_DECTOR_SEARCH_DEPTH: "20"
+        DETECT_EXCLUDE_DIRECTORIES_SEARCH_DEPTH: "20"
+        DETECT_EXCLUDE_DIRECTORIES: node_modules
+        DETECT_BLACKDUCK_SIGNATURE_EXCLUSION_NAME_PATTERNS: detect.jar
+        DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
     - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'push'}}}
       uses: lejouni/blackduck-sarif-formatter@main
       with:
