--- a/action.yml
+++ b/action.yml
@@ -195,7 +195,7 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: 3.9 #install the python needed
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_full_scan == 'false'}}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_full_scan == 'false'}}
       name: Install dependencies
       run: |
         python -m pip install --upgrade pip
