added rapid scan for black duck

--- a/action.yml
+++ b/action.yml
@@ -192,37 +192,14 @@ runs:
         name: polaris-scan-results
         path: ${{inputs.polaris_sarif_file}}
       continue-on-error: true
-
-    #------------Black Duck incremental------------------------#
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_full_scan == 'false'}}
-      name: Setup python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9 #install the python needed
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_full_scan == 'false'}}
-      name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests blackduck_direct_scan_action
-        echo "detectOpts=detect.code.location.name=${{inputs.blackduck_project}}-${{inputs.blackduck_version}},detect.timeout=7200,detect.detector.search.depth=20,detect.excluded.directories.search.depth=20,detect.excluded.directories=node_modules,detect.blackduck.signature.scanner.exclusion.name.patterns=detect.jar,detect.npm.dependency.types.excluded=DEV,detect.wait.for.results=true,${{inputs.blackduck_detect_opts}}" >> $GITHUB_ENV
-      shell: bash
-    # Run Black Duck rapid scan
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_full_scan == 'false'}}
-      name: Run Black Duck Rapid Scan
-      run: |
-        blackduck-direct-scan-action --debug=${{ inputs.blackduck_log_level }} --bd_url ${{ inputs.blackduck_url }} --bd_token ${{ inputs.blackduck_token }} --mode rapid --bd_trustcert true --project=${{ inputs.blackduck_project }} --version=${{ inputs.blackduck_version }} --sarif blackduck-sarif.json --detect_opts	${{ env.detectOpts }}
-      shell: bash
-      env:
-        # Pass the GitHub token to the script in order to create PRs
-        GITHUB_TOKEN: ${{ inputs.github_token }}  
     #------------Black Duck full------------------------#
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_full_scan == 'true'}}
+    - if: ${{inputs.blackduck == 'true'}
       name: Black Duck Analysis with synopsys-action
       uses: synopsys-sig/synopsys-action@v1.1.0
       with:
         blackduck_apiToken: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
-        blackduck_scan_full: true
+        blackduck_scan_full: ${{ inputs.blackduck_full_scan }}
         github_token: ${{ inputs.github_token }}
         blackduck_automation_fixpr: false
         blackduck_scan_failure_severities: "NONE"
@@ -230,6 +207,8 @@ runs:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}-${{inputs.blackduck_version}}
+        DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
+        DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
         DETECT_DETECTOR_SEARCH_CONTINUE: "true"
@@ -239,12 +218,14 @@ runs:
         DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
         DETECT_TOOLS: "ALL,IAC_SCAN" #All is not activating IaC scan, it needs to be activate separately with IAC_SCAN
 
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && inputs.blackduck_full_scan == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true'}}
       uses: lejouni/blackduck-sarif-formatter@main
       with:
-        url: ${{ inputs.blackduck_url }}
-        token: ${{ inputs.blackduck_token }}
-        outputFile: ${{github.workspace}}/blackduck-sarif.json
+        blackduck_url: ${{ inputs.blackduck_url }}
+        blackduck_apiToken: ${{ inputs.blackduck_token }}
+        blackduck_scan_full: ${{ inputs.blackduck_full_scan }}
+        blackduck_outputFile: ${{github.workspace}}/blackduck-sarif.json
+        blackduck_scanOutputPath: ${{github.workspace}}/bd_scan
 
     - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true'}}
       name: Upload SARIF file
