--- a/action.yml
+++ b/action.yml
@@ -90,9 +90,9 @@ inputs:
     required: false
     default: detect.tools="ALL"
   blackduck_policy_categories:
-    description: "Which policy category vulnerabilites are returned. SECURITY and LICENSE are default."
+    description: "Which policy category vulnerabilites are returned. SECURITY is default."
     required: false
-    default: SECURITY,LICENSE #Options are [COMPONENT,SECURITY,LICENSE,UNCATEGORIZED,OPERATIONAL]
+    default: SECURITY #Options are [COMPONENT,SECURITY,LICENSE,UNCATEGORIZED,OPERATIONAL]
   blackduck_sarif:
     description: By setting this true, you will get results output as a sarif format file. Default is false.
     required: false
